apps/phab/kubernetes/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: phabricator
  name: phabricator
spec:
  finalizers:
    - kubernetes
status:
  phase: Active
