apps/phab/kubernetes/phab.dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: phabricator
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: phabricator
    helm.sh/chart: phabricator-9.0.17
  name: phabricator
  namespace: phabricator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: phabricator
      app.kubernetes.io/name: phabricator
  template:
    metadata:
      annotations:
        prometheus.io/port: '9117'
        prometheus.io/scrape: 'true'
      labels:
        app.kubernetes.io/instance: phabricator
        app.kubernetes.io/name: phabricator
        helm.sh/chart: phabricator-9.0.17
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - envFrom:
            - secretRef:
                name: phabricator-app
          image: 'docker.io/bitnami/phabricator:2020.7.0-debian-10-r41'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 6
            httpGet:
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
              path: /auth/
              port: http
            initialDelaySeconds: 180
            timeoutSeconds: 5
          name: phabricator
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          readinessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
              path: /auth/
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
          volumeMounts:
            - mountPath: /bitnami/phabricator
              name: phabricator-data
            - mountPath: /opt/bitnami/apache/conf/vhosts
              name: phabricator-apache
        - command:
            - /bin/apache_exporter
            - '--scrape_uri'
            - 'http://status.localhost:80/server-status/?auto'
          image: 'docker.io/bitnami/apache-exporter:0.8.0-debian-10-r0'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 15
            timeoutSeconds: 5
          name: metrics
          ports:
            - containerPort: 9117
              name: metrics
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources: null
      hostAliases:
        - hostnames:
            - status.localhost
          ip: 127.0.0.1
      volumes:
        - name: phabricator-data
          persistentVolumeClaim:
            claimName: phabricator
        - name: phabricator-apache
          persistentVolumeClaim:
            claimName: phabricator-apache
