apps/phab/kubernetes/phab.svc.yaml
---
# Source: phabricator/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: phabricator
    helm.sh/chart: phabricator-9.0.17
    app.kubernetes.io/instance: phabricator
    heritage: Tiller
  name: phabricator
  namespace: phabricator
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  externalIPs:
    - 136.186.1.192
  selector:
    app.kubernetes.io/name: phabricator
    app.kubernetes.io/instance: phabricator
  type: ClusterIP
