apps/phab/kubernetes/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: phabricator
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: phabricator
    helm.sh/chart: phabricator-9.0.17
  name: phabricator
  namespace: phabricator
spec:
  rules:
    - host: phab.gw-cloud.org
      http:
        paths:
          - backend:
              serviceName: phabricator
              servicePort: http
            path: /
  tls:
  - hosts:
    - phab.gw-cloud.org
